# dataforge-ai

./: .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  alembic.ini  demo.py  docker-compose.yml  logging.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 43cabc872556_initial.py
conventions/: default_convention.yaml
docs/: FUNCTIONAL_GUIDE.md  governance_embedding_prefilter.md
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ErrorBoundary.jsx  Layout.jsx
frontend/src/pages/: Connections.jsx  DdlBuilder.jsx  Governance.jsx  Lineage.jsx  SqlQuery.jsx
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  ddl_wrapper.py  governance_wrapper.py  orchestrator.py  registry.py  router.py  sql_wrapper.py
src/ai/: __init__.py  model_advisor.py  optimizer.py  output_parsers.py  prompts.py  provider.py  rag.py  sql_generator.py
src/api/: deps.py  router.py
src/api/routes/: agent.py  connection.py  ddl_builder.py  etl.py  lineage.py  modeling.py  sql.py  warehouse.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  database.py  exceptions.py  models.py  schemas.py
src/db/: __init__.py  base.py  clickhouse_adapter.py  doris_adapter.py  duckdb_sandbox.py  factory.py  hive_adapter.py  mysql_adapter.py  oracle_adapter.py  postgres_adapter.py  sqlserver_adapter.py
src/etl/: __init__.py  pipeline.py
src/metadata/: __init__.py  catalog.py
src/warehouse/: __init__.py  base_agent.py  convention_loader.py  ddl_agent.py  ddl_auto_builder.py  embedding.py  layers.py  lineage.py  schema_manager.py  sql_agent.py  tools.py
tests/: conftest.py  test_agents.py  test_base_agent.py  test_connection.py  test_ddl_auto_builder.py  test_duckdb_sandbox.py  test_embedding.py  test_modeling.py  test_sql.py  test_tools.py
