[project]
name = "dataforge-ai"
version = "0.1.0"
description = "AI-powered data warehouse construction platform with multi-database connectivity, intelligent data modeling, SQL generation/optimization, data lineage tracking, and ETL pipeline design."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "DataForge Team" },
]
keywords = ["data-warehouse", "etl", "sql", "ai", "data-lineage", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    # Database - async ORM & drivers
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "aiomysql>=0.2.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    # Database - specific drivers
    "clickhouse-driver>=0.2.0,<1.0.0",
    "pyhive[hive]>=0.7.0,<1.0.0",
    "oracledb>=2.0.0,<3.0.0",
    "pymssql>=2.3.0,<3.0.0",
    # Local verification sandbox
    "duckdb>=1.0.0,<2.0.0",
    # Convention file parsing
    "pyyaml>=6.0,<7.0",
    # HTTP client
    "httpx>=0.27.0,<1.0.0",
    # AI / LLM
    "openai>=1.50.0,<2.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain>=0.3.0,<1.0.0",
    # Settings & config
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    # Caching
    "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",       # for FastAPI TestClient
    "factory-boy>=3.3.0,<4.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "langchain-tests>=0.3.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/dataforge/dataforge-ai"
Repository = "https://github.com/dataforge/dataforge-ai"
Documentation = "https://dataforge-ai.readthedocs.io"
Issues = "https://github.com/dataforge/dataforge-ai/issues"

# ========================
# Build system
# ========================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ========================
# Ruff - linter & formatter
# ========================
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["dataforge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ========================
# mypy
# ========================
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ========================
# pytest
# ========================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "integration: marks tests that require external services (deselect with '-m \"not integration\"')",
]

# ========================
# Coverage
# ========================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
